--- a/bibsonomy-rest-common/pom.xml
+++ b/bibsonomy-rest-common/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>2.0.48</version>
+		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
