--- a/bibsonomy-wiki/pom.xml
+++ b/bibsonomy-wiki/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>2.0.48</version>
+		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>bibsonomy-wiki</artifactId>
 	<name>BibSonomy CV Wiki</name>
