added exceptions to hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -11,3 +11,5 @@ src/main/webapp/WEB-INF/lib
 src/main/webapp/WEB-INF/classes
 src/main/webapp/META-INF
 bibsonomy-lucene/src/test/resources/lucene_*
+nbactions.xml
+nb-configuration.xml
