--- a/bibsonomy-importer/pom.xml
+++ b/bibsonomy-importer/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 	<dependencies>
 		<dependency>
