--- a/bibsonomy-lucene/pom.xml
+++ b/bibsonomy-lucene/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 	
 	<properties>
