--- a/bibsonomy-model/pom.xml
+++ b/bibsonomy-model/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 	<build>
 		<plugins>
