--- a/bibsonomy-scrapingservice/pom.xml
+++ b/bibsonomy-scrapingservice/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 
 	<dependencies>
