--- a/bibsonomy-web-common/pom.xml
+++ b/bibsonomy-web-common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 	<artifactId>bibsonomy-web-common</artifactId>
 	<name>BibSonomy-Web-Common</name>
