--- a/bibsonomy-database-common/pom.xml
+++ b/bibsonomy-database-common/pom.xml
@@ -11,6 +11,12 @@
 	</parent>
 	<artifactId>bibsonomy-database-common</artifactId>
 	<packaging>jar</packaging>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+		</license>
+	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
