--- a/bibsonomy-openaccess/pom.xml
+++ b/bibsonomy-openaccess/pom.xml
@@ -16,8 +16,8 @@
 	</parent>
 	<licenses>
 		<license>
-			<name>GNU General Public License, Version 3 or later</name>
-			<url>http://www.gnu.org/licenses/gpl.html</url>
+			<name>GNU Lesser General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
 		</license>
 	</licenses>
 	<dependencies>
