license for opensocial and qrcode

--- a/bibsonomy-bibtex-parser/pom.xml
+++ b/bibsonomy-bibtex-parser/pom.xml
@@ -61,7 +61,8 @@
 				<configuration>
 					<excludes>
 						<exclude>src/main/java/bibtex/**</exclude>
-						<exclude>src/main/resources/bibtex/**</exclude>
+						<exclude>src/test/resources/**</exclude>
+						<exclude>src/main/resources/**</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
