--- a/bibsonomy-opensocial/pom.xml
+++ b/bibsonomy-opensocial/pom.xml
@@ -9,7 +9,14 @@
 		<artifactId>bibsonomy</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
-
+	
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+		</license>
+	</licenses>
+	
 	<repositories>
 		<repository>
 			<id>java.net.m2</id>
