--- a/bibsonomy-qrcode/pom.xml
+++ b/bibsonomy-qrcode/pom.xml
@@ -15,6 +15,12 @@
 		<jpod.version>5.3</jpod.version>
 		<zxing.version>2.0</zxing.version>
 	</properties>
+	<licenses>
+		<license>
+			<name>GNU General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
