--- a/bibsonomy-scrapingservice/pom.xml
+++ b/bibsonomy-scrapingservice/pom.xml
@@ -16,7 +16,12 @@
 		<groupId>org.bibsonomy</groupId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
-
+	<licenses>
+		<license>
+			<name>GNU Affero General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/agpl.html</url>
+		</license>
+	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
