--- a/bibsonomy-suggestionservice/pom.xml
+++ b/bibsonomy-suggestionservice/pom.xml
@@ -8,6 +8,12 @@
 		<groupId>org.bibsonomy</groupId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
+	<licenses>
+		<license>
+			<name>GNU Affero General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/agpl.html</url>
+		</license>
+	</licenses>
 	<packaging>war</packaging>
 	<artifactId>bibsonomy-suggestionservice</artifactId>
 	<name>BibSonomy Suggestion Service</name>
