--- a/bibsonomy-wiki/pom.xml
+++ b/bibsonomy-wiki/pom.xml
@@ -8,6 +8,12 @@
 		<groupId>org.bibsonomy</groupId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License, Version 3 or later</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+		</license>
+	</licenses>
 	<artifactId>bibsonomy-wiki</artifactId>
 	<name>BibSonomy CV Wiki</name>
 	<dependencies>
