--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -75,6 +75,11 @@ lucene.tagCloud.enabled = true
 # the limit of the tag cloud when searching the index
 lucene.tagCloud.limit = 1000
 
+# Elasticsearch IP and port, if we have multiple addresses, they
+# will be separated by "," and port and ip are separated by ":"
+es.address = localhost:9300
+# Elasticsearch cluster name e.g. elasticsearch
+es.cluster.name = elasticsearch
 
 # SWORD Configuration
 publication.reporting.mode = ALL
