--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -100,7 +100,7 @@ cron.fulltextsearch.regenerate.enabled.bookmark = ${cron.fulltextsearch.regenera
 # internal: database, ldap: ldap server, openid: open id server, x509, saml (for shibboleth)
 auth.order = internal,openid,httpbasic
 # disables the registration (currently only the link-rendering), this is used by some pumas
-#auth.register.disabled = true
+auth.register.disabled = false
 
 # 
 # LDAP Config
