fix license exclusion

--- a/pom.xml
+++ b/pom.xml
@@ -341,7 +341,7 @@
 						</description>
 					</properties>
 					<excludes>
-						<exclude>**/LICENSE</exclude>
+						<exclude>**/LICENSE*</exclude>
 						<exclude>**/README*</exclude>
 						<exclude>src/test/resources/**</exclude>
 						<exclude>src/main/resources/**</exclude>
