--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -79,7 +79,7 @@ lucene.tagCloud.limit = 1000
 # will be separated by "," and port and ip are separated by ":"
 es.address = localhost:9300
 # Elasticsearch cluster name e.g. elasticsearch
-es.cluster.name = elasticsearch
+es.cluster.name =
 
 # SWORD Configuration
 publication.reporting.mode = ALL
