--- a/bibsonomy-bibtex-parser/pom.xml
+++ b/bibsonomy-bibtex-parser/pom.xml
@@ -7,8 +7,7 @@
 	<artifactId>bibsonomy-bibtex-parser</artifactId>
 	<packaging>jar</packaging>
 	<description>
-		BibTeX Parser from
-		http://www-plan.cs.colorado.edu/henkel/stuff/javabib/
+		BibTeX Parser from http://www-plan.cs.colorado.edu/henkel/stuff/javabib/
 	</description>
 	<parent>
 		<groupId>org.bibsonomy</groupId>
@@ -56,13 +55,11 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.mycila.maven-license-plugin</groupId>
-				<artifactId>maven-license-plugin</artifactId>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
 				<configuration>
-					<excludes>
+					<excludes combine.children="append">
 						<exclude>src/main/java/bibtex/**</exclude>
-						<exclude>src/test/resources/**</exclude>
-						<exclude>src/main/resources/**</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
