--- a/bibsonomy-database/pom.xml
+++ b/bibsonomy-database/pom.xml
@@ -37,7 +37,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.0.0</version>
+		<version>3.0.1-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
