converted toClassify to boolean in the Controllers

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -169,4 +169,4 @@ dev.messagesource.cache = -1
 invisible.oauth.consumers = 
 
 # sets the value of user's toClassify field in UserRegistrationController and VuFindUserController
-user.defaultToClassify=1
+user.defaultToClassify=true
