click on authornames, users, tags, communitypost leads the user to the remote puma url

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -1,8 +1,8 @@
 project.name  = BibLicious
 # address INCLUDING the trailing slash!
 # (both home + img server)
-# 2nd home address: http://localhost:8080/
-project.home  = http://127.0.0.1:8080/
+# 2nd home address: http://127.0.0.1:8080/
+project.home  = http://localhost:8080/
 project.files.home = ${user.home}
 
 # bookmark previews server (empty image server = disabled previews)
