--- a/pom.xml
+++ b/pom.xml
@@ -757,6 +757,11 @@
 				<artifactId>commons-codec</artifactId>
 				<version>1.4</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.1.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
