added a property which controls the users toClassify field. this property is injected into the DBLogicUserInterfaceFactory of which the id="logic" and id="AdminLogic" are instances of.

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -167,3 +167,6 @@ dev.messagesource.cache = -1
 
 # comma separated list holding the consumer keys of OAuth clients that should not be deletable
 invisible.oauth.consumers = 
+
+# users default to_classify; 0 classifies all new users as non-spammers
+user.defaultToClassify = 0
