--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -167,3 +167,6 @@ dev.messagesource.cache = -1
 
 # comma separated list holding the consumer keys of OAuth clients that should not be deletable
 invisible.oauth.consumers = 
+
+# controls the default toClassify field of users. 0 means all are classified as non-spammers
+user.defaultToClassify = 0
