updated developer identifier

--- a/bibsonomy-webapp/src/main/webapp/resources/addons/safari/bibsonomy-buttons-extension/update-manifest.plist
+++ b/bibsonomy-webapp/src/main/webapp/resources/addons/safari/bibsonomy-buttons-extension/update-manifest.plist
@@ -8,7 +8,7 @@
        <key>CFBundleIdentifier</key>
        <string>org.bibsonomy.buttons</string>
        <key>Developer Identifier</key>
-       <string>TODO: replace</string>
+       <string>RQ8CG56FP3</string>
        <key>CFBundleVersion</key>
        <string>1</string>
        <key>CFBundleShortVersionString</key>
