--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
@@ -231,10 +231,10 @@
 		<servlet-name>AdminHandler</servlet-name>
 		<url-pattern>/AdminHandler</url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
+<!--	<servlet-mapping>
 		<servlet-name>SettingsHandler</servlet-name>
 		<url-pattern>/SettingsHandler</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>-->
 
 	<jsp-config>
 		<jsp-property-group>
