--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -656,6 +656,10 @@
     		<artifactId>elasticsearch</artifactId>
     		<version>${es.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 	<properties>
 		<es.version>1.2.4</es.version>
