->moved spring factorybeans to lucene module to fix testcases (lucene module is not the best place, but there seems to be no better)

--- a/bibsonomy-lucene/src/test/resources/lucene-test.properties
+++ b/bibsonomy-lucene/src/test/resources/lucene-test.properties
@@ -20,3 +20,5 @@ lucene.index.maxFieldLength = 5000
 lucene.tagCloud.enabled = true
 # the limit of the tag cloud when searching the index
 lucene.tagCloud.limit = 1000
+es.address = 
+es.cluster.name =
