--- a/bibsonomy-lucene/pom.xml
+++ b/bibsonomy-lucene/pom.xml
@@ -106,6 +106,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-web-common</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-database</artifactId>
 			<scope>test</scope>
 			<type>test-jar</type>
