--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -30,7 +30,8 @@ project.addons.firefox.url = https://addons.mozilla.org/de/firefox/addon/bibsono
 #PUMA buttons
 #project.addons.chrome.url = https://chrome.google.com/webstore/detail/puma-buttons/emdfjhapplcngnmhllpdmaecgoafjjmc
 #project.addons.firefox.url = https://addons.mozilla.org/en-US/firefox/addon/puma-buttons/
-
+# Group creation mode
+project.groupscreationmode = automatic
 
 
 # possible values: reCaptcha, mockCaptcha
