--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -23,7 +23,7 @@ project.picture.path  = ${project.files.home}/bibsonomy_pics/
 
 
 project.theme = bibsonomy
-project.addons.available = chrome,firefox
+project.addons.available = chrome,firefox,safari
 #BibSonomy buttons
 project.addons.chrome.url = https://chrome.google.com/webstore/detail/bibsonomy-buttons/lbbnooihfnhphbgeajgmpmaedkdjgeid
 project.addons.firefox.url = https://addons.mozilla.org/de/firefox/addon/bibsonomy-buttons/
