readded availableAddons config to buttons page
cleanup

myX button now uses the url /my$PROJECT_THEME schema instead of /user/$LOGGEDIN_USER

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -23,6 +23,7 @@ project.picture.path  = ${project.files.home}/bibsonomy_pics/
 
 
 project.theme = bibsonomy
+# FIXME: this property currently does not allow to disable one specific addon
 project.addons.available = chrome,firefox,safari
 #BibSonomy buttons
 project.addons.chrome.url = https://chrome.google.com/webstore/detail/bibsonomy-buttons/lbbnooihfnhphbgeajgmpmaedkdjgeid
