remove Memento Timegate redirect handler and directly use external service

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -60,7 +60,7 @@ recaptcha.publicKey = publicKey
 recaptcha.recaptchaServer = http://api.recaptcha.net
 
 # Memento configuration
-memento.timegate = http://mementoweb.org/timegate/
+memento.timegate = http://timetravel.mementoweb.org/memento
 
 # Lucene Configuration
 # update the lucene index?
