--- a/bibsonomy-webapp/src/main/resources/old_layout_messages.properties
+++ b/bibsonomy-webapp/src/main/resources/old_layout_messages.properties
@@ -1,2 +1,5 @@
 
-join.group.unsupported = Joining groups aren't supported in the old layout anymore. Please switch to the <a href="/bibsonomy3">new layout.</a>
+group.manage.header      = Administer group
+group.manage.unsupported = Administering a group is not supported in the old layout anymore. Please switch to the <a href="/bibsonomy3">new layout</a>.
+
+join.group.unsupported = Joining a group isn't supported in the old layout anymore. Please switch to the <a href="/bibsonomy3">new layout.</a>
