->defaultToClassify default value

--- a/bibsonomy-database/src/test/resources/database-test.properties
+++ b/bibsonomy-database/src/test/resources/database-test.properties
@@ -3,4 +3,5 @@ database.main.url = ${database.main.url}
 database.main.username = ${database.main.username}
 database.main.password = ${database.main.password}
 
+user.defaultToClassify = 1
 createDatabaseBeforeLoading = true
