->disables elasticsearch by default

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -80,9 +80,11 @@ lucene.tagCloud.limit = 1000
 
 # Elasticsearch IP and port, if we have multiple addresses, they
 # will be separated by "," and port and ip are separated by ":"
-es.address = localhost:9300
+#es.address = localhost:9300
+s.address =
 # Elasticsearch cluster name e.g. elasticsearch
-es.cluster.name = elasticsearch
+#es.cluster.name = elasticsearch
+es.cluster.name =
 
 # SWORD Configuration
 publication.reporting.mode = ALL
