--- a/bibsonomy-lucene/pom.xml
+++ b/bibsonomy-lucene/pom.xml
@@ -47,7 +47,6 @@
 	</licenses>
 	<properties>
 		<lucene.version>4.8.1</lucene.version>
-		<es.version>1.2.4</es.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -57,7 +56,7 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>${es.version}</version>
+			<version>1.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
