--- a/bibsonomy-recommender-connector/pom.xml
+++ b/bibsonomy-recommender-connector/pom.xml
@@ -38,7 +38,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.0.1-SNAPSHOT</version>
+		<version>3.1.0</version>
 	</parent>
 	
 	<licenses>
