->disabled lucene update by default

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -65,9 +65,9 @@ memento.timegate = http://timetravel.mementoweb.org/memento
 
 # Lucene Configuration
 # update the lucene index?
-lucene.enableUpdater = true
+lucene.enableUpdater = false
 # base path to all indices
-lucene.index.basePath = ${project.files.home}/lucene2/
+lucene.index.basePath = ${project.files.home}/lucene48/
 # possible values: 
 #    - decimal number
 #    - LIMITED (sets lucene's default value)
