--- a/bibsonomy-entityresolver/pom.xml
+++ b/bibsonomy-entityresolver/pom.xml
@@ -38,7 +38,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.2.0-SNAPSHOT</version>
+		<version>3.2.0</version>
 	</parent>
 	<licenses>
 		<license>
