--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -1,7 +1,7 @@
 project.name  = BibLicious
 # address INCLUDING the trailing slash!
 # (both home + img server)
-# 2nd home address: http://127.0.0.1:8080/
+#project.home  = http://127.0.0.1:8080/
 project.home  = http://localhost:8080/
 project.files.home = ${user.home}
 
