adapted properties files to new server

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -80,10 +80,8 @@ lucene.tagCloud.limit = 1000
 
 # Elasticsearch IP and port, if we have multiple addresses, they
 # will be separated by "," and port and ip are separated by ":"
-#es.address = localhost:9300
 es.address =
 # Elasticsearch cluster name e.g. elasticsearch
-#es.cluster.name = elasticsearch
 es.cluster.name =
 
 # SWORD Configuration
@@ -172,16 +170,13 @@ facebook.userindex.path = ${project.files.home}/userindex
 news.group = kde
 news.tag = bibsonomynews
 
-# these values shouldn't be overridden by production systems; only for development
-dev.messagesource.cache = -1
-
 # comma separated list holding the consumer keys of OAuth clients that should not be deletable
 invisible.oauth.consumers = 
 
 # database settings
 # main database
 database.main.driverClassName = com.mysql.jdbc.Driver
-database.main.url = jdbc:mysql://www.biblicious.org:3308/bibsonomy?autoReconnect=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;mysqlEncoding=utf8&amp;amp;zeroDateTimeBehavior=convertToNull
+database.main.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy?autoReconnect=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;mysqlEncoding=utf8&amp;amp;zeroDateTimeBehavior=convertToNull
 database.main.maxIdle = 50
 database.main.maxActive = 260
 database.main.maxWait = 10000
@@ -216,20 +211,20 @@ database.recommender.tag.maxWait = ${database.main.maxWait}
 database.recommender.tag.removeAbandoned = ${database.main.removeAbandoned}
 database.recommender.tag.removeAbandonedTimeout = ${database.main.removeAbandonedTimeout}
 # TODO: adapt
-database.recommender.tag.username = bibsonomy
+database.recommender.tag.username = recommender
 database.recommender.tag.password = 
 
 # item recommender database
 database.recommender.item.driverClassName = ${database.main.driverClassName}
-database.recommender.item.url = jdbc:mysql://biblicious.org/bibsonomy_recommender?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+database.recommender.item.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_item_recommender?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
 database.recommender.item.maxIdle = ${database.main.maxIdle}
 database.recommender.item.maxActive = ${database.main.maxActive}
 database.recommender.item.maxWait = ${database.main.maxWait}
 database.recommender.item.removeAbandoned = ${database.main.removeAbandoned}
 database.recommender.item.removeAbandonedTimeout = ${database.main.removeAbandonedTimeout}
 # TODO: adapt
-database.recommender.item.username = bibsonomy
-database.recommender.item.password = 
+database.recommender.item.username = ${database.recommender.tag.username}
+database.recommender.item.password = ${database.recommender.tag.password}
 
 # lucene database (only read only; maybe slave for performance)
 database.lucene.driverClassName = ${database.slave.driverClassName}
@@ -239,20 +234,23 @@ database.lucene.maxActive = ${database.main.maxActive}
 database.lucene.maxWait = ${database.main.maxWait}
 database.lucene.removeAbandoned = ${database.main.removeAbandoned}
 database.lucene.removeAbandonedTimeout = ${database.main.removeAbandonedTimeout}
-database.lucene.username = ${database.main.username}
+database.lucene.username = bibsonomy_lucene
 database.lucene.password = ${database.main.password}
 
 # opensocial database
 database.opensocial.driverClassName = ${database.main.driverClassName}
-database.opensocial.url = jdbc:mysql://biblicious.org/bibsonomy_opensocial?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+database.opensocial.url = jdbc:mysql://biblicious.org:3308/bibsonomy_opensocial?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
 database.opensocial.maxIdle = ${database.main.maxIdle}
 database.opensocial.maxActive = ${database.main.maxActive}
 database.opensocial.maxWait = ${database.main.maxWait}
 database.opensocial.removeAbandoned = ${database.main.removeAbandoned}
 database.opensocial.removeAbandonedTimeout = ${database.main.removeAbandonedTimeout}
 # TODO: adapt
-database.opensocial.username = bibsonomy
-database.opensocial.password = 
+database.opensocial.username = bibsonomy_os
+database.opensocial.password = ${database.main.password}
 
 # controls the default toClassify field of users. 0 means all are classified as non-spammers
 user.defaultToClassify = 1
+
+# these values shouldn't be overridden by production systems; only for development
+dev.messagesource.cache = -1
