fixed database url

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -204,7 +204,7 @@ database.clicklogger.password = ${database.main.password}
 
 # tag recommender database
 database.recommender.tag.driverClassName = ${database.main.driverClassName}
-database.recommender.tag.url = jdbc:mysql://biblicious.org/bibsonomy_recommender?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+database.recommender.tag.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_recommender?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
 database.recommender.tag.maxIdle = ${database.main.maxIdle}
 database.recommender.tag.maxActive = ${database.main.maxActive}
 database.recommender.tag.maxWait = ${database.main.maxWait}
