--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -173,10 +173,11 @@ news.tag = bibsonomynews
 # comma separated list holding the consumer keys of OAuth clients that should not be deletable
 invisible.oauth.consumers = 
 
+database.mysql.default.config = autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8&zeroDateTimeBehavior=convertToNull
 # database settings
 # main database
 database.main.driverClassName = com.mysql.jdbc.Driver
-database.main.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy?autoReconnect=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;mysqlEncoding=utf8&amp;amp;zeroDateTimeBehavior=convertToNull
+database.main.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy?${database.mysql.default.config}
 database.main.maxIdle = 50
 database.main.maxActive = 260
 database.main.maxWait = 10000
@@ -204,7 +205,7 @@ database.clicklogger.password = ${database.main.password}
 
 # tag recommender database
 database.recommender.tag.driverClassName = ${database.main.driverClassName}
-database.recommender.tag.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_recommender?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+database.recommender.tag.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_recommender?${database.mysql.default.config}
 database.recommender.tag.maxIdle = ${database.main.maxIdle}
 database.recommender.tag.maxActive = ${database.main.maxActive}
 database.recommender.tag.maxWait = ${database.main.maxWait}
@@ -216,7 +217,7 @@ database.recommender.tag.password =
 
 # item recommender database
 database.recommender.item.driverClassName = ${database.main.driverClassName}
-database.recommender.item.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_item_recommender?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+database.recommender.item.url = jdbc:mysql://shredder.cs.uni-kassel.de:3308/bibsonomy_item_recommender?${database.mysql.default.config}
 database.recommender.item.maxIdle = ${database.main.maxIdle}
 database.recommender.item.maxActive = ${database.main.maxActive}
 database.recommender.item.maxWait = ${database.main.maxWait}
@@ -239,7 +240,7 @@ database.lucene.password = ${database.main.password}
 
 # opensocial database
 database.opensocial.driverClassName = ${database.main.driverClassName}
-database.opensocial.url = jdbc:mysql://biblicious.org:3308/bibsonomy_opensocial?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+database.opensocial.url = jdbc:mysql://biblicious.org:3308/bibsonomy_opensocial?${database.mysql.default.config}
 database.opensocial.maxIdle = ${database.main.maxIdle}
 database.opensocial.maxActive = ${database.main.maxActive}
 database.opensocial.maxWait = ${database.main.maxWait}
