--- a/pom.xml
+++ b/pom.xml
@@ -711,15 +711,15 @@
 			<dependency>
 				<groupId>xerces</groupId>
 				<artifactId>xercesImpl</artifactId>
-				<!-- <version>2.9.1</version> -->
+				<!-- TODO: why do we need 2.8.1? <version>2.9.1</version> -->
 				<version>2.8.1</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<artifactId>xml-apis</artifactId>
 				<groupId>xml-apis</groupId>
-				<!-- <version>1.3.04</version> -->
-				<version>1.4.01</version>
+				<!-- TODO: document why we need this version -->
+				<version>1.0.b2</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
