--- a/bibsonomy-database/src/test/resources/database-test.properties
+++ b/bibsonomy-database/src/test/resources/database-test.properties
@@ -1,7 +1,16 @@
+database.datasource.class = org.apache.commons.dbcp.BasicDataSource
+
 database.main.driverClassName = com.mysql.jdbc.Driver
 database.main.url = ${database.main.url}
+database.main.maxIdle = 50
+database.main.maxActive = 260
+database.main.maxWait = 10000
+database.main.removeAbandoned = true
+database.main.removeAbandonedTimeout = 300
 database.main.username = ${database.main.username}
 database.main.password = ${database.main.password}
 
 user.defaultToClassify = 1
+
+
 createDatabaseBeforeLoading = true
