--- a/bibsonomy-recommender-connector/src/test/resources/recommender-test.properties
+++ b/bibsonomy-recommender-connector/src/test/resources/recommender-test.properties
@@ -1,9 +1,23 @@
+database.datasource.class = org.apache.commons.dbcp.BasicDataSource
+
+# tag recommender database
 database.recommender.tag.driverClassName = com.mysql.jdbc.Driver
 database.recommender.tag.url = ${database.recommender.tag.url}
+database.recommender.tag.maxIdle = 50
+database.recommender.tag.maxActive = 260
+database.recommender.tag.maxWait = 10000
+database.recommender.tag.removeAbandoned = true
+database.recommender.tag.removeAbandonedTimeout = 300
 database.recommender.tag.username = ${database.recommender.tag.username}
 database.recommender.tag.password = ${database.recommender.tag.password}
 
-database.recommender.item.driverClassName = com.mysql.jdbc.Driver
+# item recommender database
+database.recommender.item.driverClassName = ${database.recommender.tag.driverClassName}
 database.recommender.item.url = ${database.recommender.item.url}
+database.recommender.item.maxIdle = ${database.recommender.tag.maxIdle}
+database.recommender.item.maxActive = ${database.recommender.tag.maxActive}
+database.recommender.item.maxWait = ${database.recommender.tag.maxWait}
+database.recommender.item.removeAbandoned = ${database.recommender.tag.removeAbandoned}
+database.recommender.item.removeAbandonedTimeout = ${database.recommender.tag.removeAbandonedTimeout}
 database.recommender.item.username = ${database.recommender.item.username}
 database.recommender.item.password = ${database.recommender.item.password}
