--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -173,6 +173,7 @@ news.tag = bibsonomynews
 # comma separated list holding the consumer keys of OAuth clients that should not be deletable
 invisible.oauth.consumers = 
 
+database.datasource.class = org.apache.tomcat.dbcp.dbcp.BasicDataSource
 database.mysql.default.config = autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8&zeroDateTimeBehavior=convertToNull
 # database settings
 # main database
