--- a/bibsonomy-gImporter/pom.xml
+++ b/bibsonomy-gImporter/pom.xml
@@ -34,7 +34,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.2.0-SNAPSHOT</version>
+		<version>3.3.0-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
@@ -47,6 +47,16 @@
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-database</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-database</artifactId>
+			<scope>compile</scope>
+			<type>test-jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
