--- a/bibsonomy-gImporter/src/main/resources/bibsonomy-dnbimporter.properties
+++ b/bibsonomy-gImporter/src/main/resources/bibsonomy-dnbimporter.properties
@@ -1,3 +1,10 @@
+database.datasource.class = org.apache.commons.dbcp.BasicDataSource
+database.main.maxIdle = 50
+database.main.maxActive = 260
+database.main.maxWait = 10000
+database.main.removeAbandoned = true
+database.main.removeAbandonedTimeout = 300
+
 database.main.driverClassName = com.mysql.jdbc.Driver
 database.main.url = 
 database.main.username = 
