updater enabled by default

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -65,7 +65,7 @@ memento.timegate = http://timetravel.mementoweb.org/memento
 
 # Lucene Configuration
 # update the lucene index?
-lucene.enableUpdater = false
+lucene.enableUpdater = true
 # base path to all indices
 lucene.index.basePath = ${project.files.home}/lucene48/
 # possible values: 
