->dnb imports with unique ids, more error-resistance, tags, and configurable user name

--- a/bibsonomy-gImporter/src/main/resources/bibsonomy-dnbimporter.properties
+++ b/bibsonomy-gImporter/src/main/resources/bibsonomy-dnbimporter.properties
@@ -14,6 +14,7 @@ database.dnb.url =
 database.dnb.username = 
 database.dnb.password = 
 
+dnbimporter.username = dnbimporter
 
 user.defaultToClassify = 0
 createDatabaseBeforeLoading = false
