+SQL_BLOCK_SIZE

--- a/bibsonomy-gImporter/src/main/resources/bibsonomy-dnbimporter.properties
+++ b/bibsonomy-gImporter/src/main/resources/bibsonomy-dnbimporter.properties
@@ -15,6 +15,7 @@ database.dnb.username =
 database.dnb.password = 
 
 dnbimporter.username = dnbimporter
+dnbimporter.initialOffset = 0
 
 user.defaultToClassify = 0
 createDatabaseBeforeLoading = false
