--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -9,6 +9,9 @@ project.files.home = ${user.home}
 project.img = 
 project.blog  = http://blog.bibsonomy.org
 
+# used by PUMA (e.g. Universitätsbibliothek Kassel)
+project.provider =  
+
 project.defaultLocale = en
 
 project.email = webmaster@bibsonomy.org
