--- a/bibsonomy-lucene/pom.xml
+++ b/bibsonomy-lucene/pom.xml
@@ -47,6 +47,7 @@
 	</licenses>
 	<properties>
 		<lucene.version>4.8.1</lucene.version>
+		<es.version>1.2.4</es.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,7 +57,7 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>1.2.4</version>
+			<version>${es.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -165,6 +166,25 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
 		</dependency>
+<!-- 		<dependency>
+			<groupId>com.carrotsearch.randomizedtesting</groupId>
+			<artifactId>randomizedtesting-runner</artifactId>
+			<version>${randomizedtesting-runner.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-test-framework</artifactId>
+			<version>${lucene.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>${es.version}</version>
+			<scope>test</scope>
+			<type>test-jar</type>
+		</dependency> -->
 	</dependencies>
 	<build>
 		<testResources>
