--- a/bibsonomy-lucene/src/test/resources/lucene-test.properties
+++ b/bibsonomy-lucene/src/test/resources/lucene-test.properties
@@ -22,3 +22,4 @@ lucene.tagCloud.enabled = true
 lucene.tagCloud.limit = 1000
 es.address = 
 es.cluster.name =
+project.home = http://localhost/testcase
