->configurable elasticsearch index name

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -83,6 +83,7 @@ lucene.tagCloud.limit = 1000
 es.address =
 # Elasticsearch cluster name e.g. elasticsearch
 es.cluster.name =
+es.index.name = posts
 
 # SWORD Configuration
 publication.reporting.mode = ALL
