+configurable es.project.home

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -84,6 +84,7 @@ es.address =
 # Elasticsearch cluster name e.g. elasticsearch
 es.cluster.name =
 es.index.name = posts
+es.project.home = ${project.home}
 
 # SWORD Configuration
 publication.reporting.mode = ALL
