--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -86,6 +86,9 @@ es.cluster.name =
 es.index.name = posts
 es.project.home = ${project.home}
 
+genealogy.import.user = geneologie
+
+
 # SWORD Configuration
 publication.reporting.mode = ALL
 sword.dirTemp = /tmp/
