--- a/bibsonomy-database/pom.xml
+++ b/bibsonomy-database/pom.xml
@@ -99,6 +99,10 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
