--- a/pom.xml
+++ b/pom.xml
@@ -763,7 +763,12 @@
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
-				<version>1.2.1</version>
+				<version>1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2.1</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-codec</groupId>
