read only property to disable all write actions

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -3,6 +3,8 @@ project.name  = BibLicious
 # (both home + img server)
 # 2nd home address: http://127.0.0.1:8080/
 project.home  = http://localhost:8080/
+system.mode.readOnly = false
+
 project.files.home = ${user.home}
 
 # bookmark previews server (empty image server = disabled previews)
