--- a/pom.xml
+++ b/pom.xml
@@ -717,14 +717,14 @@
 			<dependency>
 				<groupId>xerces</groupId>
 				<artifactId>xercesImpl</artifactId>
-				<!-- TODO: why do we need 2.8.1? <version>2.9.1</version> -->
+				<!-- version that we have in tomcat/lib -->
 				<version>2.8.1</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<artifactId>xml-apis</artifactId>
 				<groupId>xml-apis</groupId>
-				<!-- TODO: document why we need this version -->
+				<!-- version that we have in tomcat/lib -->
 				<version>1.0.b2</version>
 				<scope>provided</scope>
 			</dependency>
