->type in genealogie username property

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -86,7 +86,7 @@ es.address =
 es.cluster.name =
 es.project.home = ${project.home}
 
-genealogy.import.user = geneologie
+genealogy.import.user = genealogie
 
 
 # SWORD Configuration
