started to separate lucene and elasticsearch code
(goal: replace lucene with elasticsearch and provide a better interface to even replace elasticsearch in a future release)

--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,8 @@
 		<module>bibsonomy-wiki</module>
 		<module>bibsonomy-recommender-connector</module>
 		<module>bibsonomy-suggestionservice</module>
+		<module>bibsonomy-search</module>
+		<module>bibsonomy-search-elasticsearch</module>
 	</modules>
 	<build>
 		<pluginManagement>
