--- a/bibsonomy-lucene/pom.xml
+++ b/bibsonomy-lucene/pom.xml
@@ -47,18 +47,8 @@
 	</licenses>
 	<properties>
 		<lucene.version>4.8.1</lucene.version>
-		<es.version>1.2.4</es.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>${es.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -165,6 +155,11 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-search</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 <!-- 		<dependency>
 			<groupId>com.carrotsearch.randomizedtesting</groupId>
